styles/project-theme.css
/* ... */
#alphaCollision{ background-color: white; width: 10px; height: 6px; float: left; }
#alphaShift{ background-color: white; width: 10px; height: 6px; float: left; }
#betaCollision{ background-color: white; width: 10px; height: 6px; float: left; }
#betaShift{ background-color: white; width: 10px; height: 6px; float: left; }
#gammaCollision{ background-color: white; width: 10px; height: 6px; float: left; }
#gammaShift{ background-color: white; width: 10px; height: 6px; float: left; }
#atomPosZCollision{ background-color: white; width: 10px; height: 4px; float: left; }
#atomPosZShift{ background-color: white; width: 10px; height: 4px; float: left; }
#atomPosXCollision{ background-color: white; width: 10px; height: 4px; float: left; }
#atomPosXShift{ background-color: white; width: 10px; height: 4px; float: left; }
#atomPosYCollision{ background-color: white; width: 10px; height: 4px; float: left; }
#atomPosYShift{ background-color: white; width: 10px; height: 4px; float: left; }
#cellVolumeCollision{ background-color: white; width: 10px; height: 4px; float: left; }
#cellVolumeShift{ background-color: white; width: 10px; height: 4px; float: left; }

#iacBody{
    padding: 5px;
    padding-left: 25px;
}
.padTop10{ padding-top: 10px;}
.binaryCheck{
    text-transform: uppercase;
    font-family: "Open Sans", sans-serif;
    font-size: 14px;
    font-weight: 900;
    line-height: 15.4px;
    color: #6a6a6e;
    padding-top: 12px;
    padding-right: 12px;
}
ul.tagit input[type="text"]{
    padding-left: 10px!important;
    padding-top: 1px!important;
    padding-bottom: 1px!important;
    font-family: "Open Sans", sans-serif;
    font-size: 15.68px;
    font-weight: 400;
    line-height: 21px;
    color: #6a6a6e;
}
.footerLink{
    text-transform: uppercase;
    font-family: "Open Sans", sans-serif;
    font-size: 15.4px;
    font-weight: 900;
    line-height: 15.4px;
    color: #6a6a6e;
    margin-bottom: 30px;
    margin-top: 20px;
    margin-left: 100px;
    cursor: pointer;
}
.loader:before,
.loader:after,
.loader {
  border-radius: 50%;
  width: 2.5em;
  height: 2.5em;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: load7 1.8s infinite ease-in-out;
  animation: load7 1.8s infinite ease-in-out;
}
.loader {
  font-size: 10px;
  margin-bottom: 60px;
margin-left: 200px;
  position: relative;
  text-indent: -9999em;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}
.loader:before {
  left: -3.5em;
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}
.loader:after {
  left: 3.5em;
}
.loader:before,
.loader:after {
  content: '';
  position: absolute;
  top: 0;
}
@-webkit-keyframes load7 {
  0%,
  80%,
  100% {
    box-shadow: 0 2.5em 0 -1.3em #ffffff;
  }
  40% {
    box-shadow: 0 2.5em 0 0 #ffffff;
  }
}
@keyframes load7 {
  0%,
  80%,
  100% {
    box-shadow: 0 2.5em 0 -1.3em #ffffff;
  }
  40% {
    box-shadow: 0 2.5em 0 0 #ffffff;
  }
}
.footerLink:hover{text-decoration: none!important; color:#443771!important;}
.searchCat { padding-bottom: 10px; padding-top: 5px; }
.searchCat a {
    display: block;
    padding: 8px 40px;
    padding-left: 30px;
    text-transform: uppercase;
    text-decoration: none!important;
    background: #6f6299;
    font-family: "Open Sans", sans-serif;
    font-size: 16px;
    font-weight: 900;
    line-height: 17.6px;
    color: #fff; }

.btn-label {
  text-transform: uppercase;
    text-decoration: none!important;
    background: #6f6299;
    font-family: "Open Sans", sans-serif;
    font-size: 14px;
    font-weight: bold;
    line-height: 17.6px;
    color: #6a6a6e;  
}
.btn-label.active { color: white!important; }
.btn-label:hover {
    color: white!important;
}

.lodLabel label {
    padding-top: 20px;
  text-transform: uppercase;
    text-decoration: none!important;
    background: transparent;
    font-family: "Open Sans", sans-serif;
    font-size: 14px;
    font-weight: bold;
    line-height: 17.6px;
    color: #6a6a6e;  
}
.lodLabel .slider-input {
        float: none;
        clear: both;
        background-color: #3c4147;
        width: 50px; }
.lodLabel .slider-input .form-control {
          height: 28px;
          padding: 5px;
          text-align: center; }
.pad15 { padding-top: 15px;}
.cameraCheckbox { padding-top: 7px;}
.align-left { text-align: left!important; margin-top: -50px;}
.padLeft9 { padding-left: 9px!important; }
.padTop15 { padding-top: 17px!important; }
.smFont {
    text-transform: uppercase;
    font-family: "Open Sans", sans-serif;
    font-size: 12.6px;
    font-weight: 900;
    line-height: 16px;
    color: #6a6a6e;
}
#atomPositioningAuto, #atomPositioningABC, atomPositioningXYZ { letter-spacing: 0px!important; }
.margTop10 { margin-top: 10px!important; }
.experimental { background-color: #76760a!important; }
.experimental.active { background-color: #abab20!important; }
#doNotShowAgain { float: left; }
#tutorial {
    padding-left: 33px;
    padding-right: 33px;
}
#sfont { font-size: 11px; }
#bfont { font-size: 15px; }
#hexagonal .bravais-lattice-block { display: none; }

